Fixed sizing in menus, scrollbar no longer gets cutoff when resizing viewport

--- a/src/client/stylesheets/components/_header.scss
+++ b/src/client/stylesheets/components/_header.scss
@@ -3,7 +3,7 @@ $headerHeight: 13.2vmin;
 .header-bar{
     height:$headerHeight;
     width:100%;
-    min-height:70px;
+    min-height:90px;
     background-color:white;
     position:relative;
     z-index: 10;
