--- a/src/client/stylesheets/components/menu/_base_style.scss
+++ b/src/client/stylesheets/components/menu/_base_style.scss
@@ -9,6 +9,7 @@
   box-shadow: 0 0 4px #d9d9d9;
   border-radius: 3px;
   color: #666;
+  min-height: 90px;
 }
 .rc-menu-hidden {
   display: none;
